--- a/public/main/index.html
+++ b/public/main/index.html
@@ -15,7 +15,7 @@
     <h1 class="badge badge-light">Markify ME</h1>
     <div class="cards card-deck"></div>
     <div  id="new_course" class="m-2">
-        <button id="add_course" class="btn btn-dark">Add Course</button>
+        <button id="add_course" class="btn btn-light">Add Course</button>
     </div>
 </body>
 </html>
