--- a/public/main/index.html
+++ b/public/main/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Marks Manager</title>
+    <link rel="shortcut icon" type="image/x-icon" href="./main/css/l.jpg" />
+    <link href="https://fonts.googleapis.com/css?family=Baloo+Chettan|Lobster|Luckiest+Guy" rel="stylesheet">
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link rel="stylesheet" href="./main/css/style.css">
     <script src="./main/js/jquery-3.3.1.js"></script>
@@ -15,7 +17,7 @@
     <h1 class="badge badge-light">Markify ME</h1>
     <div class="cards card-deck"></div>
     <div  id="new_course" class="m-2">
-        <button id="add_course" class="btn btn-light">Add Course</button>
+        <button id="add_course" class="btn btn-dark">Add Course</button>
     </div>
 </body>
 </html>
